--- a/app/src/main/res/layout/activity_loginview.xml
+++ b/app/src/main/res/layout/activity_loginview.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".loginview">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frame_layout"
+        >
+
+        <!-- Main content -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"
+            app:itemIconTint="@color/cardview_dark_background"
+            app:itemTextColor="@color/design_default_color_background"
+            app:menu="@menu/bottom_nav"
+            />
+    </FrameLayout>
+
     <EditText
         android:id="@+id/bannerId"
         android:layout_width="wrap_content"
