--- a/app/src/main/res/layout/activity_loginview.xml
+++ b/app/src/main/res/layout/activity_loginview.xml
@@ -1,78 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".loginview">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/frame_layout"
-        >
-
-        <!-- Main content -->
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
-            app:itemIconTint="@color/cardview_dark_background"
-            app:itemTextColor="@color/design_default_color_background"
-            app:menu="@menu/bottom_nav"
-            />
-    </FrameLayout>
 
     <EditText
         android:id="@+id/bannerId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="160dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="B00XXX"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="Banner Id"
+        android:drawableLeft="@drawable/user"
+        android:background="@drawable/edit_round"
+        android:inputType="textPersonName" />
 
-    <TextView
-        android:id="@+id/date1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
-        android:text="Date of birth"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
-        app:layout_constraintHorizontal_bias="0.771"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bannerId"
-        tools:ignore="MissingConstraints" />
+    <RelativeLayout
+        android:id="@+id/dob_layout"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/bannerId"
+        android:drawableLeft="@drawable/date"
+        android:background="@drawable/edit_round"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="49dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="152dp"
-        android:layout_marginEnd="84dp"
-        android:onClick="fundate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bannerId"
-        app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+        <TextView
+            android:id="@+id/date1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/date"
+            android:width="150dp"
+            android:hint="DOB"
+            android:textSize="25sp" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignRight="@+id/date1"
+            android:background="@drawable/edit_round"
+            android:layout_alignParentEnd="true"
+            android:onClick="fundate"
+            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dob_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/button_round"
         android:onClick="checkCred"
-        android:text="Login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date1"
-        app:layout_constraintVertical_bias="0.326" />
+        android:text="Login" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
