--- a/app/src/main/res/layout/activity_home_activity.xml
+++ b/app/src/main/res/layout/activity_home_activity.xml
@@ -24,7 +24,7 @@
             />
 
 
-        <androidx.viewpager.widget.ViewPager
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
